--- a/Quiz/pubspec.yaml
+++ b/Quiz/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   liquid_progress_indicator: ^0.3.2
+  rflutter_alert: ^1.0.3
 
 dev_dependencies:
   flutter_test:
